2010-07-27 CHEN Yangyang <skabyy@gmail.com>

    * Optimize the repository configure pane
    * Fix some bugs

2010-07-27 Homer Xing <homer.xing@gmail.com>

    * Terminal window grabs focus.
    * Add KDevelop, an IDE similar to Visual Studio.
    * Add Kile, a LaTeX editor.
    * Add LyX, "what you see is what you mean" LaTeX editor.
    * Add Pdftk, a command line tool which can split, merge, encrypt and uncompress PDF files.
    * Add PDFedit, add marks and annotations on PDF files.
    * Add GoldenDict, one of the best dictionary applications.
    * Add Artha, looking up synonyms and antonyms.
    * Add MyTourbook, excellent route planner, and GPS log analyser software.
    * Do not store downloaded files in /var/cache/ailurus/ any more.
    * Add RouteConverter, converts between different GPS track formats.
    * Add Backintime, incremental backup tool supporting schedule.
    * Add Geogebra, learning algebra and geometry.
    * Add Celestia, 3D astronomy simulator.
    * Add Kstars, planetarium software.
    * Add Handbrake, video transformer.

2010-07-26 Homer Xing <homer.xing@gmail.com>

    * Use a proxy server if http_proxy environment variable is set

2010-07-25 Homer Xing <homer.xing@gmail.com>

    * Improve behaviour of agreement dialog.
      When the user select "I agree." and press "No", then still show dialog next time.
    * Add qcad-doc in qcad item
    * Do not repeatly display error messages on same file from get_information_pixbuf()
    * Synchronize online data in main process.
    * Show software status as tick or cross.
    * Change sort order of software items. Installed items are at bottom.
    * Support for saving and loading installed software items.
    * Display less indent in "print computer information" dialog.
    * Improve the introduction text of /apps/update-notifier/auto_launch
    * Support for disabling GNOME login sound
    * Improve the introduction text of /apps/gdm/simple-greeter/disable_user_list